--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
    <title>The Chef</title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <link rel="stylesheet" type="text/css" href="css/style.css" />
+   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
    <h1>The Chef's Recipes</h1>
