--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <li><a href="index.html" class="current"> Home</a></li>
          <li><a href="recipes.html"> Recipes</a> </li>
          <li><a href="form.html"> Form</a> </li>
-         <li><a href="login.php"> Login</a> </li>
+         <li><a href="login.html"> Login</a> </li>
       </ul>
    </div>
    <div id="content">
