--- a/form.html
+++ b/form.html
@@ -47,13 +47,14 @@
 	<h1>Submit Recipes</h1>
 	<div class = "navigation">
       <ul>
-         <li><a href="index.html" class="current"> Home</a></li>
+         <li><a href="index.html" > Home</a></li>
          <li><a href="recipes.html"> Recipes</a> </li>
-         <li><a href="form.html"> Form</a> </li>
+         <li><a href="form.html"  class="current"> Form</a> </li>
          <li><a href="login.php"> Login</a> </li>
       </ul>
    </div>
    	<div id="divToChange"></div>
+   	<div id="formHolder">
 	<form onsubmit = "submitRecipe(); return false;">
 		<fieldset>
 			<legend>Your Recipes</legend>
@@ -70,6 +71,7 @@
 			<input type = "submit" value = "submit">
 		</fieldset>
 	</form>
+	</div>
 
 </body>
 </html>
